# mathtext

./: .gitignore  LICENSE  Makefile.am  README.md  bootstrap  configure.ac
MTGUI/: MTDocWindow.cpp  MTDocWindow.h  MTGUI.vcxproj  MTGUI.vcxproj.filters  MTGuiWindow.cpp  MTGuiWindow.h  MTGuiWindow.qrc  MTGuiWindow.ui  Makefile.am  main.cpp
build-vs/: MTGUI.vcxproj  MTGUI.vcxproj.filters  MathText.sln  VSConfigurationPropertySheet.props  libmathtext.vcxproj  libmathtext.vcxproj.filters  mathtext-cli.vcxproj  mathtext-cli.vcxproj.filters  mttest.vcxproj  mttest.vcxproj.filters  vsconfiguration.vcxproj
cli/: Makefile.am  main.cpp
common/: MathDocument.cpp  MathDocumentLine.cpp  MathDocumentMsg.cpp  MathInterpreter.cpp  MathInterpreterMsg.cpp  MathSourceFile.cpp  MathTranslator.cpp  liblouis-mt.cpp  logging.cpp  utility.cpp
common/elements/: Comparator.cpp  Exponent.cpp  Fraction.cpp  GenericText.cpp  GreekLetter.cpp  ItemNumber.cpp  LineBreak.cpp  MDE.cpp  MDE_Command.cpp  MDE_Comparator.cpp  MDE_Exponent.cpp  MDE_Fraction.cpp  MDE_GenericText.cpp  MDE_GreekLetter.cpp  MDE_Group.cpp  MDE_ItemNumber.cpp  MDE_LineBreak.cpp  MDE_MathBlock.cpp  MDE_ModeMarker.cpp  MDE_Modifier.cpp  MDE_Number.cpp  MDE_Operator.cpp  MDE_Root.cpp  MDE_SourceLine.cpp  MDE_Subscript.cpp  MDE_Summation.cpp  MDE_Symbol.cpp  MDE_TextBlock.cpp  MathBlock.cpp  ModeMarker.cpp  Modifier.cpp  Number.cpp  Operator.cpp  Root.cpp  SourceLine.cpp  Subscript.cpp  Symbol.cpp  TextBlock.cpp
common/h/: LaTeXRenderer.h  MathDocument.h  MathDocumentElements.h  MathDocumentLine.h  MathDocumentMsg.h  MathExceptions.h  MathInterpreter.h  MathInterpreterMsg.h  MathRenderer.h  MathSourceFile.h  MathTranslator.h  TextRenderer.h  UEBRenderer.h  common-includes.h  liblouis-mt.h  logging.h  mathtext.h  utility.h
common/interpreters/: InterpretCommands.cpp  InterpretComparators.cpp  InterpretExponents.cpp  InterpretFractions.cpp  InterpretGreek.cpp  InterpretGroups.cpp  InterpretItemNumbers.cpp  InterpretModifiers.cpp  InterpretNumbers.cpp  InterpretOperators.cpp  InterpretRoots.cpp  InterpretSubscripts.cpp  InterpretSummations.cpp  InterpretSymbols.cpp
common/renderers/: LaTeXRenderer.cpp  MathRenderer.cpp  TextRenderer.cpp  UEBRenderer.cpp
doc/: Doxyfile  Makefile.am  synoptic.txt
doc/doxygen/: Doxyfile
gui/: CMathTextWindow.cpp  CMathTextWindow.h  CMathTextWindow.qrc  CMathTextWindow.ui  Makefile.am  MathText.sln  MathTextGUI.pro  gui.vcxproj  gui.vcxproj.filters  main.cpp
include/: LaTeXRenderer.h  MathDocument.h  MathDocumentElements.h  MathDocumentLine.h  MathExceptions.h  MathInterpreter.h  MathInterpreterMsg.h  MathRenderer.h  MathSourceFile.h  UEBRenderer.h  common-includes.h  liblouis-mt.h  logging.h  mathtext.h  utility.h
linux/: main.cpp  makefile  mttest.cpp
m4/: ax_pthread.m4  liblouis.m4
src/: Makefile.am  MathDocument.cpp  MathDocumentLine.cpp  MathInterpreter.cpp  MathInterpreterMsg.cpp  MathSourceFile.cpp  common-includes.cpp  liblouis-mt.cpp  logging.cpp  utility.cpp
src/elements/: MDE.cpp  MDE_Command.cpp  MDE_Comparator.cpp  MDE_Exponent.cpp  MDE_Fraction.cpp  MDE_GenericText.cpp  MDE_GreekLetter.cpp  MDE_Group.cpp  MDE_ItemNumber.cpp  MDE_LineBreak.cpp  MDE_MathBlock.cpp  MDE_ModeMarker.cpp  MDE_Modifier.cpp  MDE_Number.cpp  MDE_Operator.cpp  MDE_Root.cpp  MDE_SourceLine.cpp  MDE_Subscript.cpp  MDE_Summation.cpp  MDE_Symbol.cpp  MDE_TextBlock.cpp
src/interpreters/: InterpretCommands.cpp  InterpretComparators.cpp  InterpretExponents.cpp  InterpretFractions.cpp  InterpretGreek.cpp  InterpretGroups.cpp  InterpretItemNumbers.cpp  InterpretModifiers.cpp  InterpretNumbers.cpp  InterpretOperators.cpp  InterpretRoots.cpp  InterpretSubscripts.cpp  InterpretSummations.cpp  InterpretSymbols.cpp
src/renderers/: LaTeXRenderer.cpp  MathRenderer.cpp  UEBRenderer.cpp
test/: Makefile.am  coverage.txt  makefile  mttest.cpp
test/h/: mttest.h
test/include/: catch.hpp
test/interpreting/: Int_Comparators.cpp  Int_Exponents.cpp  Int_Numbers.cpp  Int_Subscripts.cpp
test/rendering/: ueb.cpp
test/rendering/ueb/: Comparators.cpp  GreekLetters.cpp  ItemNumbers.cpp  Numbers.cpp  Operators.cpp  UEB_Comparators.cpp  UEB_Exponents.cpp  UEB_Fractions.cpp  UEB_GreekLetters.cpp  UEB_ItemNumbers.cpp  UEB_Modifiers.cpp  UEB_Numbers.cpp  UEB_Operators.cpp  UEB_Roots.cpp  UEB_Subscripts.cpp  UEB_Summation.cpp  UEB_Symbols.cpp  UEB_examples.cpp  UEB_item_detection.cpp  numbers.cpp
test_files/: exam-test.txt  full-test.txt
windows/: MathText.sln  MathText.vcxproj  MathText.vcxproj.filters  ReadMe.txt  common-includes.cpp  test.vcxproj  test.vcxproj.filters
windows/gui/: ChildFrm.cpp  MainFrm.cpp  MathText.cpp  MathText.h  MathText.rc  MathText.reg  MathTextDoc.cpp  MathTextDoc.h  MathTextView.cpp  MathTextView.h  resource.h
windows/res/: MathText.rc2
